# cortex

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SHEET-LAYOUT-PLAN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.playwright-mcp/: page-2026-04-08T16-42-15-848Z.yml  page-2026-04-08T16-42-31-091Z.yml  page-2026-04-08T16-42-39-375Z.yml  page-2026-04-08T16-42-48-137Z.yml  page-2026-04-08T16-42-57-242Z.yml  page-2026-04-08T16-43-07-105Z.yml  page-2026-04-08T16-43-14-936Z.yml  page-2026-04-08T16-43-23-335Z.yml  page-2026-04-08T16-44-10-559Z.yml  page-2026-04-08T16-57-51-880Z.yml  page-2026-04-08T16-58-05-815Z.yml  page-2026-04-08T16-58-16-069Z.yml  page-2026-04-08T16-58-25-382Z.yml  page-2026-04-08T16-58-34-461Z.yml  page-2026-04-08T17-11-11-908Z.yml  page-2026-04-08T17-11-22-516Z.yml  page-2026-04-08T17-20-56-277Z.yml  page-2026-04-08T17-21-12-454Z.yml  page-2026-04-08T17-27-11-388Z.yml  page-2026-04-08T17-27-33-175Z.yml
claude-skill/: .mcp.json  README.md  SKILL.md  setup.sh
claude-skill/agents/: cortex-researcher.md
prompts/: phase-b-build-spec.md  phase-b-verified-state.md
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cortex-core/: Cargo.toml
src-tauri/crates/cortex-core/src/: lib.rs  note.rs  types.rs  vault.rs  watcher.rs
src-tauri/crates/cortex-extract/: Cargo.toml
src-tauri/crates/cortex-extract/src/: extract.rs  lib.rs  transcript.rs  vertex.rs
src-tauri/crates/cortex-graph/: Cargo.toml
src-tauri/crates/cortex-graph/src/: index.rs  lib.rs  link_parser.rs  types.rs
src-tauri/crates/cortex-kg/: Cargo.toml
src-tauri/crates/cortex-kg/src/: graph.rs  lib.rs  types.rs
src-tauri/crates/cortex-search/: Cargo.toml
src-tauri/crates/cortex-search/src/: indexer.rs  lib.rs  query.rs  schema.rs  types.rs
src-tauri/crates/cortex-voice/: Cargo.toml
src-tauri/crates/cortex-voice/src/: config.rs  events.rs  lib.rs  pipeline.rs
src-tauri/crates/cortex-voice/src/audio/: device.rs  recorder.rs  resampler.rs
src-tauri/crates/cortex-voice/src/vad/: mod.rs  silero.rs
src-tauri/src/: lib.rs  main.rs  mcp.rs  state.rs
src-tauri/src/commands/: daily.rs  editor.rs  graph.rs  kg.rs  mod.rs  plans.rs  search.rs  sessions.rs  vault.rs  voice.rs
src-tauri/src/run/: execute.rs  mod.rs  prepare.rs
src/hooks/: useFileWatcher.ts  useKeyboardShortcuts.ts  useVoice.ts
src/lib/: commandRegistry.ts  editorApi.ts
src/stores/: captureStore.ts  editorStore.ts  graphStore.ts  layoutStore.ts  runStore.ts  searchStore.ts  settingsStore.ts  vaultStore.ts  voiceStore.ts
src/themes/: applyTheme.ts  tokens.ts
test-vault/: Architecture Overview.md  Axum.md  Claude Code Source Analysis.md  CodeMirror 6.md  D3.js.md  Handy App.md  Knowledge Graph.md  MCP Integration Guide.md  README.md  Tantivy.md  Untitled Apr 9 02_02.md  Welcome.md  blue.md  notify crate.md  test.md  transcribe-rs.md
test-vault/.claude/: settings.json
test-vault/.cortex/: kg.json
test-vault/captured/: 2026-04-08_insight-mcp-fallback.md  2026-04-08_insight-parallel-compilation.md  2026-04-08_insight-safari-blank.md  2026-04-09_004213.md  2026-04-10_093942.md  20260409_004213_667.json  20260410_093942_700.json
test-vault/daily/: 2026-04-06.md  2026-04-07.md  2026-04-08.md
test-vault/decisions/: Decision - CodeMirror vs ProseMirror.md  Decision - JWT vs Sessions.md  Decision - MCP vs Custom API.md  Decision - Tantivy vs Meilisearch.md  Decision - Tauri vs Electron.md  Decision Index.md
test-vault/patterns/: Pattern - MCP as Integration Layer.md  Pattern - Parallel Agent Teams.md  Pattern - Safari 15 Compatibility.md  Pattern - Self-Bootstrapping.md
test-vault/plans/: 2026-04-09-add-readme.md  add-abort-draft.md  add-claude-md.md  add-repo-readme.md  live-drafting-view.md  test-greeting.md  verify-production-build.md
test-vault/projects/: Auth Module.md  Cortex App.md  Payment System.md
test-vault/sessions/: 1a4f8b0f-d679-45f1-a963-9ca8f1fe1e03-retrospective.md  2026-04-08_wave1-foundation.md  2026-04-08_wave3-knowledge.md  2026-04-08_wave4-graph.md  e2e-test-001.md  (+29 more)
(+81 files in other folders)
