[workspace]
members = [".", "crates/cortex-core", "crates/cortex-search", "crates/cortex-graph", "crates/cortex-voice", "crates/cortex-kg", "crates/cortex-extract"]
resolver = "2"

[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
description = "Cortex - Knowledge Graph Desktop App"

[lib]
name = "cortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "crates/cortex-core" }
cortex-search = { path = "crates/cortex-search" }
cortex-graph = { path = "crates/cortex-graph" }
cortex-voice = { path = "crates/cortex-voice" }
cortex-kg = { path = "crates/cortex-kg" }
cortex-extract = { path = "crates/cortex-extract" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
specta-typescript = "0.0.9"
dotenvy = "0.15"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"


[build-dependencies]
tauri-build = { version = "2", features = [] }
