[package]
name = "cortex-core"
version = "0.1.0"
edition = "2021"
description = "Cortex core types, vault management, and file operations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
notify = "7"
tokio = { version = "1", features = ["sync", "time"] }
walkdir = "2"
specta = "=2.0.0-rc.22"
