[package]
name = "cortex-extract"
version = "0.1.0"
edition = "2021"
description = "Post-session entity/relation extraction via Vertex AI Anthropic"

[dependencies]
gcp_auth = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
cortex-kg = { path = "../cortex-kg" }
