[package]
name = "cortex-graph"
version = "0.1.0"
edition = "2021"
description = "Link indexing and graph operations for Cortex"

[dependencies]
cortex-core = { path = "../cortex-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
anyhow = "1"
log = "0.4"
walkdir = "2"
