[package]
name = "cortex-kg"
version = "0.1.0"
edition = "2021"
description = "Claude-powered knowledge graph engine for Cortex"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
