[package]
name = "cortex-search"
version = "0.1.0"
edition = "2021"
description = "Full-text search for Cortex"

[dependencies]
cortex-core = { path = "../cortex-core" }
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
anyhow = "1"
log = "0.4"
walkdir = "2"
