[package]
name = "cortex-voice"
version = "0.1.0"
edition = "2021"
description = "Voice engine for Cortex"

[dependencies]
cpal = "0.16"
rubato = "0.16"
hound = "3.5"
rustfft = "6"
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
